# measuring-polarization-in-high-dimensions

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/superpowers/plans/: 2026-04-14-politext-pytorch-implementation.md
docs/superpowers/specs/: 2026-04-14-politext-pytorch-design.md
politext_torch/: ATTRIBUTION.txt  __init__.py  _types.py  estimators.py  fit.py  inference.py  model.py  partisanship.py  scale.py  simulate.py
politext_torch/experiments/: __init__.py  mc_bias_rmse.py  mc_coverage.py  mc_null.py
tests/: conftest.py  test_estimators.py  test_fit.py  test_inference.py  test_integration.py  test_model.py  test_partisanship.py  test_scale.py  test_simulate.py
