[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "politext-torch"
version = "0.1.0"
description = "PyTorch implementation of Gentzkow-Shapiro-Taddy (2019) partisanship estimators."
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2",
  "numpy>=1.24",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-xdist>=3.3",
  "scikit-learn>=1.3",
  "patsy>=0.5",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "joblib>=1.3",
]

[tool.setuptools.packages.find]
include = ["politext_torch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
